# pilsbot_depthai

./: CMakeLists.txt  LICENSE  package.xml
launch/: h265_node.launch.py  rgb_stereo_node.launch.py
src/: h265_node.cpp  rgb_stereo_node.cpp
