<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pilsbot_depthai</name>
  <version>0.1.0</version>
  <description>Custom nodes for the OAK-D-Lite based on the depthai_examples</description>
  <maintainer email="j.hackbarth@cubegaming.de">Johannes Hackbarth</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  
  <depend>cv_bridge</depend>
  <depend>camera_info_manager</depend>
  <depend>depthai</depend>
  <depend>depthai_ros_msgs</depend>
  <depend>depthai_bridge</depend>
  <depend>image_transport</depend>
  <depend>libopencv-dev</depend>
  <depend>ros_environment</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>stereo_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>foxglove_msgs</depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>depth_image_proc</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
